@@ -3,14 +3,12 @@ package com.zzz.basic.encrypt.base64;
  * Created by jack_ on 2016/3/7.
  */
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
 import javax.crypto.KeyGenerator;
 import javax.crypto.Mac;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
 import java.security.MessageDigest;
+import java.util.Base64;
 
 /**
  * 基础加密组件
@@ -44,7 +42,7 @@ public abstract class Coder {
      * @throws Exception
      */
     public static byte[] decryptBASE64(String key) throws Exception {
-        return (new BASE64Decoder()).decodeBuffer(key);
+        return Base64.getDecoder().decode(key);
     }
 
     /**
@@ -55,7 +53,7 @@ public abstract class Coder {
      * @throws Exception
      */
     public static String encryptBASE64(byte[] key) throws Exception {
-        return (new BASE64Encoder()).encodeBuffer(key);
+        return Base64.getEncoder().encodeToString(key);
     }
 
     /**
